Add a disconnect button and functionality

--- a/client.html
+++ b/client.html
@@ -12,6 +12,7 @@
     
     <div>
       <button id="launch_button">ENTER</button>
+      <button id="leave_button">LEAVE</button>
     </div>    
     
   </body>
