--- a/source/public/index.html
+++ b/source/public/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="menu">
   <head>
     <meta charset="utf-8">
     <title>My HTML File</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <script src="bower_components/angular/angular.js"></script>
+    <script src="menu.js"></script>
   </head>
-  <body>
-
-    <p>Nothing here {{'yet' + '!'}}</p>
-
+  <body ng-controller="MenuController">
+  
   </body>
 </html>
