--- a/source/public/index.html
+++ b/source/public/index.html
@@ -2,12 +2,37 @@
 <html lang="en" ng-app="menu">
   <head>
     <meta charset="utf-8">
-    <title>My HTML File</title>
+    <title>Player Setup</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <script src="bower_components/angular/angular.js"></script>
     <script src="menu.js"></script>
   </head>
   <body ng-controller="MenuController">
-  
+
+    <h1>BATTLE SNAKE</h1>
+
+    <form name="userForm">
+
+      <div>
+        <label>
+          Name:
+          <input type="text" name="userName" ng-model="user.name" required>
+          <span role="alert" class="error" ng-show="userForm.userName.$error.required">Required!</span>
+        </label>
+      </div>
+
+      <div>
+        <label>
+          Color:
+          <select size="1" name="userColor" required
+            ng-options="option.name for option in data.availableOptions track by option.name"
+            ng-model="data.selectedOption">
+          </select>
+          <span role="alert" class="error" ng-show="userForm.userColor.$error.required">Required!</span>
+        </label>
+      </div>
+
+    </form>
+
   </body>
 </html>
