Add default values to setup form

--- a/source/public/setup.html
+++ b/source/public/setup.html
@@ -6,7 +6,7 @@
     <div class="container">
       <label>
         Name:
-        <input type="text" name="userName" ng-model="data.name" required>
+        <input type="text" name="userName" ng-model="data.name" required autocomplete="off">
         <span role="alert" class="error" ng-show="userForm.userName.$error.required">Required!</span>
       </label>
     </div>
