Solve multiple sockets for one client on switching views

--- a/source/public/game.html
+++ b/source/public/game.html
@@ -13,8 +13,8 @@
     </div>
     
     <div>
-      <button id="launch_button">ENTER</button>
-      <button id="leave_button">LEAVE</button>
+      <button ng-click="join()">ENTER</button>
+      <button ng-click="leave()">LEAVE</button>
     </div>
   </div>
 </body>
