--- a/source/public/game.html
+++ b/source/public/game.html
@@ -1,15 +1,20 @@
 <header>
   <link rel="stylesheet" href="game_styles.css" />
   <script src="socket.io.js"></script>
-  <script src="jquery.js"></script>
+  <script src="jquery.js"></script>  
 </head>
 <body>
   <div class="game-container">
     <h1>Game</h1>
     <a href="#!/home">home</a>
 
-    <div>
-      <canvas id="gameCanvas" height="500px" width="500px"></canvas>
+    <div class="container">
+      <div>
+        <canvas id="gameCanvas" class="left" height="500px" width="500px"></canvas>
+      </div>
+      <div class="right">
+          <p></p>
+      </div>
     </div>
     
     <div>
