--- a/source/public/game.html
+++ b/source/public/game.html
@@ -13,7 +13,8 @@
         <canvas id="gameCanvas" class="left" height="500px" width="500px"></canvas>
       </div>
       <div class="right">
-          <p></p>
+        {{leaderboard}}
+          <!--<p ng-repeat="for entry in leaderboard">{{entry.name}} : {{entry.score}}</p>-->
       </div>
     </div>
     
