--- a/source/public/game.html
+++ b/source/public/game.html
@@ -5,9 +5,6 @@
 </head>
 <body>
   <div class="game-container">
-    <h1>Game</h1>
-    <a href="#!/home">home</a>
-
     <div class="container">
       <div>
         <div>
@@ -31,6 +28,7 @@
     <div class="container">
       <button ng-hide="joined" ng-click="join()">ENTER</button>
       <button ng-show="joined" ng-click="leave()">LEAVE</button>
+      <a href="#!/setup">setup</a>
     </div>
   </div>
 </body>
