fix: attempt to fix reverse-proxy file paths

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <title>Player Setup</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <script src="socket.io.js"></script>
-    <script src="jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="main.js"></script>
-    <script src="home.js"></script>
-    <script src="setup.js"></script>
-    <script src="game.js"></script>
-    <link rel="stylesheet" href="game_styles.css" />
+    <script src="./socket.io.js"></script>
+    <script src="./jquery.js"></script>
+    <script src="./bower_components/angular/angular.js"></script>
+    <script src="./bower_components/angular-route/angular-route.js"></script>
+    <script src="./main.js"></script>
+    <script src="./home.js"></script>
+    <script src="./setup.js"></script>
+    <script src="./game.js"></script>
+    <link rel="stylesheet" href="./game_styles.css" />
   
   </head>
   <body ng-controller="MainController as ctrl">      
