--- a/src/public/game.html
+++ b/src/public/game.html
@@ -1,7 +1,7 @@
 <header>
   <link rel="stylesheet" href="game_styles.css" />
-  <script src="socket.io.js"></script>
-  <script src="jquery.js"></script>  
+  <script src="./socket.io.js"></script>
+  <script src="./jquery.js"></script>
 </head>
 <body>
   <div class="game-container">
